refactor(OverlayHost): 重构中

--- a/src/Huskui.Avalonia/Controls/AppWindow.axaml
+++ b/src/Huskui.Avalonia/Controls/AppWindow.axaml
@@ -55,7 +55,8 @@
                             <local:OverlayHost
                                 Name="{x:Static local:AppWindow.PART_DialogHost}"
                                 HorizontalContentAlignment="Center"
-                                VerticalContentAlignment="Center">
+                                VerticalContentAlignment="Center"
+                                ItemsSource="{Binding $parent[local:AppWindow].Dialogs}">
                                 <local:OverlayHost.Transition>
                                     <local:ScaleInTransition />
                                 </local:OverlayHost.Transition>
