--- a/src/Huskui.Avalonia/Controls/OverlayHost.axaml
+++ b/src/Huskui.Avalonia/Controls/OverlayHost.axaml
@@ -25,6 +25,7 @@
     <ControlTheme x:Key="{x:Type local:OverlayHost}" TargetType="local:OverlayHost">
         <Setter Property="HorizontalAlignment" Value="Stretch" />
         <Setter Property="VerticalAlignment" Value="Stretch" />
+        <Setter Property="ItemContainerTheme" Value="{StaticResource {x:Type local:OverlayItem}}" />
         <Setter Property="ItemsPanel">
             <ItemsPanelTemplate>
                 <Panel />
