refactor(OverlayHost): 改回了原来的写法，Avalonia根本没法实现移除动画，机制如此

--- a/src/Huskui.Avalonia/Controls/AppWindow.axaml
+++ b/src/Huskui.Avalonia/Controls/AppWindow.axaml
@@ -55,8 +55,7 @@
                             <local:OverlayHost
                                 Name="{x:Static local:AppWindow.PART_DialogHost}"
                                 HorizontalContentAlignment="Center"
-                                VerticalContentAlignment="Center"
-                                ItemsSource="{Binding $parent[local:AppWindow].Dialogs}">
+                                VerticalContentAlignment="Center">
                                 <local:OverlayHost.Transition>
                                     <local:ScaleInTransition />
                                 </local:OverlayHost.Transition>
