--- a/src/Huskui.Gallery/Views/Pages/HomePage.axaml
+++ b/src/Huskui.Gallery/Views/Pages/HomePage.axaml
@@ -141,14 +141,15 @@
                                    Foreground="{StaticResource ControlSecondaryForegroundBrush}" />
                     </StackPanel>
                     <StackPanel Grid.Column="1" Orientation="Horizontal" Spacing="8">
-                        <Button Theme="{StaticResource GhostButtonTheme}"
-                                ToolTip.Tip="GitHub Repository">
+                        <HyperlinkButton Theme="{StaticResource GhostButtonTheme}"
+                                         ToolTip.Tip="GitHub Repository"
+                                         NavigateUri="https://github.com/d3ara1n/Huskui.Avalonia">
                             <fi:SymbolIcon Symbol="Open" FontSize="{StaticResource MediumFontSize}" />
-                        </Button>
-                        <Button Theme="{StaticResource GhostButtonTheme}"
-                                ToolTip.Tip="Documentation">
+                        </HyperlinkButton>
+                        <HyperlinkButton Theme="{StaticResource GhostButtonTheme}"
+                                         ToolTip.Tip="Documentation" NavigateUri="https://docs.avaloniaui.net/">
                             <fi:SymbolIcon Symbol="Document" FontSize="{StaticResource MediumFontSize}" />
-                        </Button>
+                        </HyperlinkButton>
                     </StackPanel>
                 </Grid>
             </StackPanel>
