fix(ui): 修改字体设置和日志记录方式
- 将`Program.cs`中的日志记录方式从`LogToTrace`更改为`LogToTextWriter(Console.Out)`
- 移除多个`axaml.cs`文件的编译指令，简化项目结构
- 在`ToolTip.axaml`中修改了边框效果，增加了阴影效果
- 在`CodeViewer.axaml`和`HomePage.axaml`中移除了字体设置，使用默认字体

--- a/src/Huskui.Avalonia/Controls/ToolTip.axaml
+++ b/src/Huskui.Avalonia/Controls/ToolTip.axaml
@@ -8,17 +8,13 @@
         <Setter Property="Background" Value="{StaticResource FlyoutBackgroundBrush}" />
         <Setter Property="CornerRadius" Value="{StaticResource SmallCornerRadius}" />
         <Setter Property="Padding" Value="12,8" />
-        <Setter Property="ClipToBounds" Value="True" />
         <Setter Property="Template">
             <ControlTemplate>
                 <Border Name="LayoutRoot" Margin="2"
                         Background="{TemplateBinding Background}"
                         BorderBrush="{TemplateBinding BorderBrush}"
                         BorderThickness="{TemplateBinding BorderThickness}"
-                        CornerRadius="{TemplateBinding CornerRadius}">
-                    <Border.Effect>
-                        <DropShadowEffect OffsetX="0" OffsetY="0" Opacity="0.2" />
-                    </Border.Effect>
+                        CornerRadius="{TemplateBinding CornerRadius}" BoxShadow="0 0 4 0 #3F000000">
                     <ContentPresenter Name="PART_ContentPresenter"
                                       Padding="{TemplateBinding Padding}"
                                       Content="{TemplateBinding Content}"
