fix(ToolTipsPage): 修复工具提示的放置属性
- 为每个按钮添加了 `ToolTip.Placement` 属性，以确保工具提示在正确的位置显示
- 移除了不必要的嵌套 `ToolTip` 元素，使代码更加简洁和易于维护
- 确保工具提示的文本内容与按钮的功能一致

--- a/src/Huskui.Gallery/Views/Overlays/ToolTipsPage.axaml
+++ b/src/Huskui.Gallery/Views/Overlays/ToolTipsPage.axaml
@@ -22,32 +22,24 @@
                                    Description="Tooltips can be placed on any side of the target control."
                                    XamlCode="&lt;ToolTip Placement=&quot;...&quot; /&gt;">
             <StackPanel Orientation="Horizontal" Spacing="16">
-                <Button Content="Top">
+                <Button Content="Top" ToolTip.Placement="Top">
                     <ToolTip.Tip>
-                        <ToolTip Placement="Top">
-                            <TextBlock Text="Top Placement" />
-                        </ToolTip>
+                        <TextBlock Text="Top Placement" />
                     </ToolTip.Tip>
                 </Button>
-                <Button Content="Bottom">
+                <Button Content="Bottom" ToolTip.Placement="Bottom">
                     <ToolTip.Tip>
-                        <ToolTip Placement="Bottom">
-                            <TextBlock Text="Bottom Placement" />
-                        </ToolTip>
+                        <TextBlock Text="Bottom Placement" />
                     </ToolTip.Tip>
                 </Button>
-                <Button Content="Left">
+                <Button Content="Left" ToolTip.Placement="Left">
                     <ToolTip.Tip>
-                        <ToolTip Placement="Left">
-                            <TextBlock Text="Left Placement" />
-                        </ToolTip>
+                        <TextBlock Text="Left Placement" />
                     </ToolTip.Tip>
                 </Button>
-                <Button Content="Right">
+                <Button Content="Right" ToolTip.Placement="Right">
                     <ToolTip.Tip>
-                        <ToolTip Placement="Right">
-                            <TextBlock Text="Right Placement" />
-                        </ToolTip>
+                        <TextBlock Text="Right Placement" />
                     </ToolTip.Tip>
                 </Button>
             </StackPanel>
