--- a/src/Huskui.Avalonia/Controls/AppWindow.axaml
+++ b/src/Huskui.Avalonia/Controls/AppWindow.axaml
@@ -39,9 +39,16 @@
                     <Panel Margin="{TemplateBinding WindowDecorationMargin}" />
                     <VisualLayerManager>
                         <VisualLayerManager.ChromeOverlayLayer>
-                            <local:OverlayHost Name="{x:Static local:AppWindow.PART_ToastHost}" Padding="12,32,12,0">
+                            <local:OverlayHost Name="{x:Static local:AppWindow.PART_ToastHost}">
                                 <local:OverlayHost.Transition>
                                     <local:HookUpTransition />
+                                </local:OverlayHost.Transition>
+                            </local:OverlayHost>
+                            <local:OverlayHost
+                                Name="{x:Static local:AppWindow.PART_DrawerHost}"
+                                HorizontalContentAlignment="Right">
+                                <local:OverlayHost.Transition>
+                                    <local:PageSlideTransition Direction="Right" />
                                 </local:OverlayHost.Transition>
                             </local:OverlayHost>
                             <local:OverlayHost
@@ -49,7 +56,7 @@
                                 HorizontalContentAlignment="Center"
                                 VerticalContentAlignment="Center">
                                 <local:OverlayHost.Transition>
-                                    <local:HookUpTransition />
+                                    <local:FocusOnTransition />
                                 </local:OverlayHost.Transition>
                             </local:OverlayHost>
                             <local:OverlayHost
