--- a/src/Huskui.Avalonia/Controls/Modal.axaml
+++ b/src/Huskui.Avalonia/Controls/Modal.axaml
@@ -3,6 +3,7 @@
                     xmlns:local="https://github.com/d3ara1n/Huskui.Avalonia">
     <Thickness x:Key="ModalContentMargin">18</Thickness>
     <BoxShadows x:Key="ModalBoxShadow">0 0 4 0 #3F000000</BoxShadows>
+
     <ControlTheme x:Key="{x:Type local:Modal}" TargetType="local:Modal">
         <Setter Property="MinHeight" Value="128" />
         <Setter Property="MinWidth" Value="256" />
@@ -10,7 +11,7 @@
         <Setter Property="CornerRadius" Value="{StaticResource LargeCornerRadius}" />
         <Setter Property="Padding" Value="{StaticResource ModalContentMargin}" />
         <Setter Property="Margin" Value="24" />
-        <Setter Property="FontWeight" Value="{StaticResource ControlFontWeight}" />
+        <Setter Property="BorderBrush" Value="{StaticResource ControlBorderBrush}" />
         <Setter Property="Template">
             <ControlTemplate>
                 <Border ClipToBounds="True" Background="{TemplateBinding Background}"
@@ -18,12 +19,10 @@
                         CornerRadius="{TemplateBinding CornerRadius}" BorderBrush="{TemplateBinding BorderBrush}"
                         BorderThickness="{TemplateBinding BorderThickness}" Margin="4"
                         BoxShadow="{StaticResource ModalBoxShadow}">
-                    <Panel>
-                        <ContentPresenter Name="PART_ContentPresenter"
-                                          Padding="{TemplateBinding Padding}" Foreground="{TemplateBinding Foreground}"
-                                          Content="{TemplateBinding Content}"
-                                          ContentTemplate="{TemplateBinding ContentTemplate}" />
-                    </Panel>
+                    <ContentPresenter Name="PART_ContentPresenter"
+                                      Padding="{TemplateBinding Padding}" Foreground="{TemplateBinding Foreground}"
+                                      Content="{TemplateBinding Content}"
+                                      ContentTemplate="{TemplateBinding ContentTemplate}" />
                 </Border>
             </ControlTemplate>
         </Setter>
