--- a/src/Huskui.Avalonia/Controls/LazyContainer.axaml
+++ b/src/Huskui.Avalonia/Controls/LazyContainer.axaml
@@ -9,8 +9,7 @@
                     <local:SkeletonContainer.IsLoading>
                         <MultiBinding Converter="{x:Static BoolConverters.And}">
                             <Binding Path="IsBad" Converter="{x:Static BoolConverters.Not}"
-                                     RelativeSource="{RelativeSource TemplatedParent}">
-                            </Binding>
+                                     RelativeSource="{RelativeSource TemplatedParent}" />
                             <Binding Path="Source.IsInProgress" RelativeSource="{RelativeSource TemplatedParent}"
                                      FallbackValue="{x:False}" />
                         </MultiBinding>
