--- a/src/Huskui.Avalonia/Controls/GrowlHost.axaml
+++ b/src/Huskui.Avalonia/Controls/GrowlHost.axaml
@@ -1,11 +1,13 @@
 ﻿<ResourceDictionary xmlns="https://github.com/avaloniaui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="https://github.com/d3ara1n/Huskui.Avalonia">
-    <ControlTheme x:Key="{x:Type local:NotificationHost}" TargetType="local:NotificationHost">
+    <ControlTheme x:Key="{x:Type local:GrowlHost}" TargetType="local:GrowlHost">
         <Setter Property="Template">
             <ControlTemplate>
                 <Border>
-                    <ItemsPresenter ItemsPanel="{TemplateBinding ItemsPanel}" />
+                    <ItemsControl
+                        ItemsSource="{Binding Items,Mode=OneTime,RelativeSource={RelativeSource TemplatedParent}}"
+                        ItemsPanel="{TemplateBinding ItemsPanel}" />
                 </Border>
             </ControlTemplate>
         </Setter>
