--- a/src/Huskui.Avalonia/Controls/OverlayHost.axaml
+++ b/src/Huskui.Avalonia/Controls/OverlayHost.axaml
@@ -25,11 +25,6 @@
     <ControlTheme x:Key="{x:Type local:OverlayHost}" TargetType="local:OverlayHost">
         <Setter Property="HorizontalAlignment" Value="Stretch" />
         <Setter Property="VerticalAlignment" Value="Stretch" />
-        <Setter Property="ItemsPanel">
-            <ItemsPanelTemplate>
-                <Panel />
-            </ItemsPanelTemplate>
-        </Setter>
         <Setter Property="Template">
             <ControlTemplate>
                 <Panel>
@@ -45,10 +40,11 @@
                             </Transitions>
                         </Border.Transitions>
                     </Border>
-                    <ItemsPresenter Name="{x:Static local:OverlayHost.PART_ItemsPresenter}"
-                                    VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                    HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                    Margin="{TemplateBinding Padding}" ItemsPanel="{TemplateBinding ItemsPanel}" />
+                    <ItemsControl Name="{x:Static local:OverlayHost.PART_ItemsPresenter}"
+                                  ItemsSource="{Binding Items,Mode=OneWay,RelativeSource={RelativeSource TemplatedParent}}"
+                                  VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                  HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                  Margin="{TemplateBinding Padding}" ItemsPanel="{TemplateBinding ItemsPanel}" />
                 </Panel>
             </ControlTemplate>
         </Setter>
