--- a/src/Huskui.Avalonia/Themes/Colors.axaml
+++ b/src/Huskui.Avalonia/Themes/Colors.axaml
@@ -128,10 +128,10 @@
     <SolidColorBrush x:Key="ControlWhiteForegroundBrush" Color="{DynamicResource WhiteColor}" />
     <SolidColorBrush x:Key="ControlBlackForegroundBrush" Color="{DynamicResource BlackColor}" />
 
-    <SolidColorBrush x:Key="NotificationBorderBrush" Color="{DynamicResource Gray1Color}" />
-    <SolidColorBrush x:Key="NotificationBackgroundBrush" Color="{DynamicResource Gray1Color}" />
+    <SolidColorBrush x:Key="GrowlBorderBrush" Color="{DynamicResource Gray1Color}" />
+    <SolidColorBrush x:Key="GrowlBackgroundBrush" Color="{DynamicResource Gray1Color}" />
 
-    <LinearGradientBrush x:Key="NotificationSuccessBackgroundBrush" StartPoint="50%,0%" EndPoint="50%,100%">
+    <LinearGradientBrush x:Key="GrowlSuccessBackgroundBrush" StartPoint="50%,0%" EndPoint="50%,100%">
         <GradientStops>
             <GradientStop Offset="0" Color="{DynamicResource Success4Color}" />
             <GradientStop Offset="0.3" Color="{DynamicResource Success2Color}" />
@@ -139,7 +139,7 @@
             <GradientStop Offset="1" Color="{DynamicResource Gray2Color}" />
         </GradientStops>
     </LinearGradientBrush>
-    <LinearGradientBrush x:Key="NotificationWarningBackgroundBrush" StartPoint="50%,0%" EndPoint="50%,100%">
+    <LinearGradientBrush x:Key="GrowlWarningBackgroundBrush" StartPoint="50%,0%" EndPoint="50%,100%">
         <GradientStops>
             <GradientStop Offset="0" Color="{DynamicResource Warning4Color}" />
             <GradientStop Offset="0.3" Color="{DynamicResource Warning2Color}" />
@@ -147,7 +147,7 @@
             <GradientStop Offset="1" Color="{DynamicResource Gray2Color}" />
         </GradientStops>
     </LinearGradientBrush>
-    <LinearGradientBrush x:Key="NotificationDangerBackgroundBrush" StartPoint="50%,0%" EndPoint="50%,100%">
+    <LinearGradientBrush x:Key="GrowlDangerBackgroundBrush" StartPoint="50%,0%" EndPoint="50%,100%">
         <GradientStops>
             <GradientStop Offset="0" Color="{DynamicResource Danger4Color}" />
             <GradientStop Offset="0.3" Color="{DynamicResource Danger2Color}" />
