--- a/src/Huskui.Avalonia/Themes/Controls.axaml
+++ b/src/Huskui.Avalonia/Themes/Controls.axaml
@@ -29,8 +29,8 @@
         <ResourceInclude Source="/Controls/ListBox.axaml" />
         <ResourceInclude Source="/Controls/Menu.axaml" />
         <ResourceInclude Source="/Controls/Modal.axaml" />
-        <ResourceInclude Source="/Controls/NotificationHost.axaml" />
-        <ResourceInclude Source="/Controls/NotificationItem.axaml" />
+        <ResourceInclude Source="/Controls/GrowlHost.axaml" />
+        <ResourceInclude Source="/Controls/GrowlItem.axaml" />
         <ResourceInclude Source="/Controls/OverlayHost.axaml" />
         <ResourceInclude Source="/Controls/OverlayItem.axaml" />
         <ResourceInclude Source="/Controls/Page.axaml" />
