--- a/src/Huskui.Gallery/Views/Overlays/FlyoutsPage.axaml
+++ b/src/Huskui.Gallery/Views/Overlays/FlyoutsPage.axaml
@@ -61,14 +61,14 @@
         <!-- Complex Content -->
         <controls:ExampleContainer Title="Complex Content"
                                    Description="Flyouts can host complex content and interactive controls."
-                                   XamlCode="&lt;Flyout&gt;&#10;    &lt;StackPanel Spacing=&quot;12&quot;&gt;&#10;        &lt;TextBlock Text=&quot;Settings&quot; FontSize=&quot;18&quot; FontWeight=&quot;Medium&quot;/&gt;&#10;        &lt;husk:Divider/&gt;&#10;        &lt;CheckBox Content=&quot;Enable Notifications&quot; IsChecked=&quot;True&quot;/&gt;&#10;        &lt;TextBlock Text=&quot;Theme&quot;/&gt;&#10;        &lt;ComboBox SelectedIndex=&quot;0&quot;&gt;&#10;            &lt;ComboBoxItem&gt;Light&lt;/ComboBoxItem&gt;&#10;            &lt;ComboBoxItem&gt;Dark&lt;/ComboBoxItem&gt;&#10;        &lt;/ComboBox&gt;&#10;        &lt;Button Content=&quot;Save Changes&quot; Classes=&quot;Primary&quot;/&gt;&#10;    &lt;/StackPanel&gt;&#10;&lt;/Flyout&gt;">
+                                   XamlCode="&lt;Flyout&gt;&#10;    &lt;StackPanel Spacing=&quot;12&quot;&gt;&#10;        &lt;TextBlock Text=&quot;Settings&quot; FontSize=&quot;18&quot; FontWeight=&quot;Medium&quot;/&gt;&#10;        &lt;husk:Divider/&gt;&#10;        &lt;CheckBox Content=&quot;Enable Growls&quot; IsChecked=&quot;True&quot;/&gt;&#10;        &lt;TextBlock Text=&quot;Theme&quot;/&gt;&#10;        &lt;ComboBox SelectedIndex=&quot;0&quot;&gt;&#10;            &lt;ComboBoxItem&gt;Light&lt;/ComboBoxItem&gt;&#10;            &lt;ComboBoxItem&gt;Dark&lt;/ComboBoxItem&gt;&#10;        &lt;/ComboBox&gt;&#10;        &lt;Button Content=&quot;Save Changes&quot; Classes=&quot;Primary&quot;/&gt;&#10;    &lt;/StackPanel&gt;&#10;&lt;/Flyout&gt;">
             <Button Content="Show Complex Flyout">
                 <Button.Flyout>
                     <Flyout>
                         <StackPanel Spacing="12">
                             <TextBlock Text="Settings" FontSize="18" FontWeight="Medium" />
                             <husk:Divider />
-                            <CheckBox Content="Enable Notifications" IsChecked="True" />
+                            <CheckBox Content="Enable Growls" IsChecked="True" />
                             <TextBlock Text="Theme" />
                             <ComboBox SelectedIndex="0">
                                 <ComboBoxItem>Light</ComboBoxItem>
