--- a/src/Huskui.Avalonia/Controls/AppWindow.axaml
+++ b/src/Huskui.Avalonia/Controls/AppWindow.axaml
@@ -48,7 +48,7 @@
                                 Name="{x:Static local:AppWindow.PART_DrawerHost}"
                                 HorizontalContentAlignment="Right">
                                 <local:OverlayHost.Transition>
-                                    <local:SidebarTransition />
+                                    <local:PageSlideTransition />
                                 </local:OverlayHost.Transition>
                             </local:OverlayHost>
                             <local:OverlayHost
